--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,8 +53,8 @@ archive: false
                 		<!-- Author Name -->
                     	<h4> {{ site.author }} </h4>
                     	<!-- Author Bio -->
-                    	<p> 
-                    		Here goes the author description. You might want to place some links too in here
+                    	<p>
+                            Versatile developer who uses a wide variety of web technologies while building apps for Android.
                     	</p>
                     </article>
                 </section>                
